# pose-bootcamp-code-quality-workshop

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: stefan.yml
src/: address_book.cpp  address_book.hpp  main.cpp
test/: address_book_tests.cpp
